Add paginated manner